; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_grep.c_gethtmlrgb.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_grep.c_gethtmlrgb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gethtmlrgb.buf = internal global [32 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [14 x i8] c"#%02x%02x%02x\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @gethtmlrgb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @gethtmlrgb(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @r_cons_rgb_parse(i8* %7, i32* %4, i32* %5, i32* %6, i32 0)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @sprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @gethtmlrgb.buf, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %13)
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @gethtmlrgb.buf, i64 0, i64 0), i8** %2, align 8
  br label %16

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %16

16:                                               ; preds = %15, %10
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i64 @r_cons_rgb_parse(i8*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
